--- a/index.html
+++ b/index.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Quizify</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <header id="header">
+        <header>
             <!--logo-->
-            <img id="header-img" 
-            src="images/ONLINE_QUIZ_LOGO-removebg-preview.png" 
-            alt="Quizify Logo"
-            class="logo"
-            style="width: 100px; height: auto;" >
-            
+            <div class="logo"></div>
+            <img src="ONLINE_QUIZ_LOGO-removebg-preview.png" 
+            alt="Quizify Logo">
+        </div>
+
             <!--nav bar-->
-            <nav id="nav-bar">
-                <a class="nav-link" href="#home">Home</a>
-                <a class="nav-link" href="#about">About</a>
-                <a class="nav-link" href="#contact">Contact</a>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </nav>
         </header>
+        <main>
         <h1>"KNOWLEDGE BEGINS WITH A QUESTIONS"</h1>
 
         <!--button-->
-        <div>
+        <div class="buttons">
             <button>Sign Up</button>
-        </div>
-        <div>
             <button>Log In</button>
         </div>
+        </main>
+        <!--icon-->
+        <footer>
+            <div class="social_icons">
+                <a href="#"><img src="facebook.png"
+                alt="Facebook"></a>
+                <a href="#"><img src="instagram.png"
+                alt="Instagram"></a>
+                <a href="#"><img src="twitter.png"
+                alt="Twitter"></a>
+            </div>
+        </footer>
     </body>
 </html>
