--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Quizify Logo">
+            <img src="ONLINE_QUIZ_LOGO-removebg-preview.png" alt="Quizify Logo">
             <span>Quizify</span>
         </div>
         <nav>
@@ -29,9 +29,12 @@
     </main>
     <footer>
         <div class="social-icons">
-            <a href="#"><img src="facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png" 
+                alt="Facebook"></a>
+            <a href="#"><img src="https://www.citypng.com/public/uploads/preview/black-and-white-outline-instagram-app-logo-icon-7017516951369307x990iaok2.png " 
+                alt="Instagram"></a>
+            <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png" 
+                alt="Twitter"></a>
         </div>
     </footer>
 </body>
