--- a/index.html
+++ b/index.html
@@ -23,10 +23,17 @@
     <main>
         <h1>"Knowledge Begins with a Question"</h1>
         <div class="buttons">
-            <button>Sign up</button>
-            <button>Log in</button>
+            <button id="signupBtn">Sign up</button>
+            <button id="loginBtn">Log in</button>
         </div>
     </main>
+    <!--log in -->
+    <script>
+  document.getElementById("loginBtn").addEventListener("click", function() {
+    window.location.href = "signup.html";
+  });
+  </script>
+
     <footer>
         <div class="social-icons">
             <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png" 
