--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="signup1.css">
 </head>
 <body>
     <div class="wrapper">
@@ -24,11 +24,9 @@
                 <label><input type="checkbox">Remember me</label>
                 <a href="#forgot_pass">Forgot password?</a>
             </div>
-            <button type="submit" class=""btn">Login</button>
+            <button type="submit" class="btn">Login</button>
             <div class="register-link">
-                <p>Don't have account?
-                    <a href="#register">Register</a>
-                </p>
+                <p>Don't have an account? <a href="#register"> Register</a></p>
             </div>
         </form>
     </div>
