--- a/signup.html
+++ b/signup.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="signup1.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="signup1.css" />
+  <title>Sign Up</title>
 </head>
 <body>
-    <div class="wrapper">
-        <form action="">
-            <h1>Login</h1>
-            <!--username-->
-            <div class="input-box">
-                <input type="text" placeholder="username" required>
-                <i class='bx bxs-user'></i>
-            </div>
-            <!--username-->
-            <div class="input-box">
-                <input type="password" placeholder="password" required>
-                <i class='bx bxs-lock-alt'></i>
-            </div>
-            <!--forgot pass-->
-            <div class="remember-forgot">
-                <label><input type="checkbox">Remember me</label>
-                <a href="#forgot_pass">Forgot password?</a>
-            </div>
-            <button type="submit" class="btn">Login</button>
-            <div class="register-link">
-                <p>Don't have an account? <a href="#register"> Register</a></p>
-            </div>
-        </form>
-    </div>
+  <div class="wrapper">
+    <form action="">
+      <h1>Sign Up</h1>
+      <p>Please fill in the form to create an account</p>
+
+      <div class="input-box">
+        <label for="email"><b>Email</b></label>
+        <input type="text" placeholder="Enter email" name="email" required/>
+      </div>
+
+      <div class="input-box">
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter password" name="psw" required/>
+      </div>
+
+      <div class="input-box">
+        <label for="psw-repeat"><b>Repeat password</b></label>
+        <input type="password" placeholder="Repeat password" name="psw-repeat" required/>
+      </div>
+
+      <div class="remember-me">
+        <label>
+          <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
+      </div>
+
+      <button type="button" class="btn" onclick="window.location.href='index.html'">Cancel</button>
+      <button type="submit" class="signup">Sign Up</button>
+    </form>
+  </div>
 </body>
 </html>
