--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <header>
         <div class="logo">
-            <img src="ONLINE_QUIZ_LOGO-removebg-preview.png" alt="Quizify Logo">
-            <span>Quizify</span>
+            <img src="server/images/ONLINE_QUIZ_LOGO-removebg-preview.png" 
+            alt="Quizify Logo">
         </div>
+
          <nav id="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -26,7 +27,6 @@
     </header>
 
     <main>
- //homepage
         <!-- Home -->
         <section id="home">
             <h1>"Knowledge Begins with a Question"</h1>
@@ -43,33 +43,13 @@
         </section>
 
         <!-- Features -->
-        <section id="features">
-
-        <!--home-->
-        <section id="home">
-        <h1>"Knowledge Begins with a Question"</h1>
-        <div class="buttons">
-            <button id="signupBtn">Sign up</button>
-            <button id="loginBtn">Log in</button>
-        </div>
-        </section>
-
-        <!--about-->
-        <section id="about">
-        <h1>🧠 Quizify</h1>
-        <p>"Quizify is an interactive online quiz platform designed to make learning fun, engaging, and effective through personalized quizzes and instant feedback."</p>
-        </section>
-
-        <!-- Features -->
          <section id="features">
-
             <h2>🔧 Key Features</h2>
             <div class="card">
                 <h3>📊 Performance Stats</h3>
                 <p>Track your progress in real-time.</p>
             </div>
             <div class="card">
-
                 <h3>🤖 AI-Powered Quizzes</h3>
                 <p>Get customized quizzes based on your skills.</p>
             </div>
@@ -108,67 +88,14 @@
     <!-- Login & Sign Up Redirect -->
     <script>
         document.getElementById("loginBtn").addEventListener("click", function() {
-            window.location.href = "signup.html";
+            window.location.href = "login.html";
         });
         document.getElementById("signupBtn").addEventListener("click", function() {
-            window.location.href = "login.html";
+            window.location.href = "signup.html";
         });
     </script>
 
-    <footer>
-        <section id="contact">
-            <div class="social-icons">
-                <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png" alt="Facebook"></a>
-                <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png" alt="Twitter"></a>
-            </div>
-            <p>© 2025 Quizify. All rights reserved.</p>
-
-          <h3>🤖 AI-Powered Quizzes</h3>
-          <p>Get customized quizzes based on your skills.</p>
-        </div>
-    </section>
-
-    <!-- Target Users -->
-     <section id="target">
-      <h2>👥 Who is it for?</h2>
-      <div class="target">
-        <div class="card">
-          <h3>Students</h3>
-          <p>Practice quizzes before exams.</p>
-        </div>
-        <div class="card">
-          <h3>Teachers</h3>
-          <p>Create and share quizzes with your class.</p>
-        </div>
-        <div class="card">
-          <h3>Organizations</h3>
-          <p>Assess staff skills through automated evaluations.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- FAQ -->
-     <section id="faq" class="faq">
-      <h2>❓ Frequently Asked Questions</h2>
-      <div class="card">
-        <p><strong>Is Quizify free?</strong> Yes, the basic version is free for everyone.</p>
-        <p><strong>Is it only for students?</strong> No, it's also for teachers and companies.</p>
-        <p><strong>Do I need to sign up?</strong> Yes, to save your progress and results.</p>
-      </div>
-    </section>
-    </main>
-
-    <!--log in & sign up, nama file terbalik, so dekat sini keliru sikit -->
-    <script>
-  document.getElementById("loginBtn").addEventListener("click", function() {
-    window.location.href = "signup.html"; 
-    });
-
-    document.getElementById("signupBtn").addEventListener("click", function() {
-    window.location.href = "login.html";
-  });
-  </script>
-
+    <!--footer-->
     <footer>
         <section id="contact">
         <div class="social-icons">
