--- a/dashboard.html
+++ b/dashboard.html
@@ -6,9 +6,11 @@
     <title>Quizify</title>
     <link rel="stylesheet" href="dashboard1.css"/>
 </head>
+
 <body>
     <header>
         <div class="logo">
+            <span class="hamburger" onclick="toggleSidebar()">☰</span>
             <img src="server/images/ONLINE_QUIZ_LOGO-removebg-preview.png" 
             alt="Quizify Logo">
         </div>
@@ -23,14 +25,52 @@
         </nav>
     </header>
 
-    <main>
-        <ul>
-            <li><a href="#dashboard">Dashboard</a></li>
-            <li><a href="#my_quizzes">My Quizzes</a></li>
-            <li><a href="#create_quiz">Create Quiz</a></li>
-            <li><a href="#results">Results</a></li>
-            <li><a href="#setting">Setting</a></li>
-        </ul>
+    <!--side bar-->
+    <div id="sidebar" class="sidebar">
+    <a href="#dashboard">Dashboard</a>
+    <a href="#my_quizzes">My Quizzes</a>
+    <a href="#create_quiz">Create Quiz</a>
+    <a href="#results">Results</a>
+    <a href="#settings">Settings</a>
+</div>
+</body>
 
+<script>
+  function toggleSidebar() {
+    const sidebar = document.getElementById("sidebar");
+    sidebar.classList.toggle("active");
+  }
+
+  // Optional: close sidebar when a link is clicked
+  document.querySelectorAll("#sidebar a").forEach(link => {
+    link.addEventListener("click", () => {
+      document.getElementById("sidebar").classList.remove("active");
+    });
+  });
+</script>
+
+
+    <main>
+        <h2>Welcome Back!</h2>
+
+        <!--container-->
+        <section id="dashboard">
+        <div class="dash-container">
+            <div class="total">
+            <h3>Total Quizzes</h3>
+            </div>
+
+            <div class="attempts">
+            <h3>Attempts</h3>
+            </div>
+
+            <div class="avg">
+            <h3>Average Score</h3>
+            </div>
+        </div>
+
+        <h2>Recent Activity:</h2>
+
+          
     </main>
 </html>
