2nd commit result

--- a/quizResult.html
+++ b/quizResult.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="feedback" id="feedback"></div>
-            <div class="action">
+            <div class="actions">
                 <button onclick="retakeQuiz()">Retake Quiz</button>
                 <button onclick="reviewAnswers()">Review Answers</button>
             </div>
