--- a/client/public/signup.html
+++ b/client/public/signup.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="signup1.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="assets/signup1.css" />
   <title>Sign Up</title>
 </head>
+
 <body>
   <div class="wrapper">
     <form action="">
@@ -14,17 +16,17 @@
 
       <div class="input-box">
         <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Enter email" name="email" required/>
+        <input type="text" placeholder="Enter email" name="email" required />
       </div>
 
       <div class="input-box">
         <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter password" name="psw" required/>
+        <input type="password" placeholder="Enter password" name="psw" required />
       </div>
 
       <div class="input-box">
         <label for="psw-repeat"><b>Repeat password</b></label>
-        <input type="password" placeholder="Repeat password" name="psw-repeat" required/>
+        <input type="password" placeholder="Repeat password" name="psw-repeat" required />
       </div>
 
       <div class="remember-me">
@@ -38,4 +40,5 @@
     </form>
   </div>
 </body>
+
 </html>
