resolve (first part)

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quizify</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <header>
         <div class="logo">
-            <img src="server/images/ONLINE_QUIZ_LOGO-removebg-preview.png" 
-            alt="Quizify Logo">
+            <img src="server/images/ONLINE_QUIZ_LOGO-removebg-preview.png" alt="Quizify Logo">
         </div>
 
-         <nav id="navbar">
+        <nav id="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -39,11 +40,12 @@
         <!-- About -->
         <section id="about">
             <h1>🧠 Quizify</h1>
-            <p>"Quizify is an interactive online quiz platform designed to make learning fun, engaging, and effective through personalized quizzes and instant feedback."</p>
+            <p>"Quizify is an interactive online quiz platform designed to make learning fun, engaging, and effective
+                through personalized quizzes and instant feedback."</p>
         </section>
 
         <!-- Features -->
-         <section id="features">
+        <section id="features">
             <h2>🔧 Key Features</h2>
             <div class="card">
                 <h3>📊 Performance Stats</h3>
@@ -87,10 +89,10 @@
 
     <!-- Login & Sign Up Redirect -->
     <script>
-        document.getElementById("loginBtn").addEventListener("click", function() {
+        document.getElementById("loginBtn").addEventListener("click", function () {
             window.location.href = "login.html";
         });
-        document.getElementById("signupBtn").addEventListener("click", function() {
+        document.getElementById("signupBtn").addEventListener("click", function () {
             window.location.href = "signup.html";
         });
     </script>
@@ -98,17 +100,21 @@
     <!--footer-->
     <footer>
         <section id="contact">
-        <div class="social-icons">
-            <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png" 
-                alt="Facebook"></a>
-            <a href="#"><img src="https://www.citypng.com/public/uploads/preview/black-and-white-outline-instagram-app-logo-icon-7017516951369307x990iaok2.png " 
-                alt="Instagram"></a>
-            <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png" 
-                alt="Twitter"></a>
-        </div>
-        <p>© 2025 Quizify. All rights reserved.</p>
+            <div class="social-icons">
+                <a href="#"><img
+                        src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png"
+                        alt="Facebook"></a>
+                <a href="#"><img
+                        src="https://www.citypng.com/public/uploads/preview/black-and-white-outline-instagram-app-logo-icon-7017516951369307x990iaok2.png "
+                        alt="Instagram"></a>
+                <a href="#"><img
+                        src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png"
+                        alt="Twitter"></a>
+            </div>
+            <p>© 2025 Quizify. All rights reserved.</p>
 
         </section>
     </footer>
 </body>
+
 </html>
