--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/signup1.css" />
+  <link rel="stylesheet" href="signup1.css" />
   <title>Sign Up</title>
 </head>
 
