--- a/frontend/createQuiz.html
+++ b/frontend/createQuiz.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="createQuiz1.css"/>
 </head>
 
-<boody>
+<body>
     <header>
         <h1>Create a New Quiz</h1>
         </header>
@@ -27,11 +27,15 @@
 
                 <label for="quiz-desc">Description: </label>
                 <textarea id="quiz-desc" placeholder="Breif description"></textarea>
+                <label for="totalQuestions">Total Questions:</label>
+                <input type="number" id="totalQuestions" min="1" required placeholder="e.g. 5" />
+
                 <button onclick="nextStep()">Next</button>
             </div>
 
             <!--add question-->
             <div class="step-content hidden" id="step2">
+                <p id="questionTracker">0 / ? questions added</p>
                 <label for="question">Question: </label>
                 <input type="text" id="question" 
                 placeholder="Enter your question">
@@ -41,8 +45,13 @@
                 <input type="text" id="answer2" placeholder="Choice 2">
                 <input type="text" id="answer3" placeholder="Choice 3">
                 <input type="text" id="answer4" placeholder="Choice 4">
-                <button onclick="addQuestion()">Add Question</button>
-                <button onclick="nextStep()">Next</button>
+
+                <div class="button-group">
+                  <button onclick="addQuestion()">Add Question</button>
+                  <button onclick="nextStep()">Next</button>
+                  <button onclick="saveToLocal()">Save</button>
+                  <button onclick="backStep()">Back</button>
+                </div>
             </div>
 
             <!--add question-->
