--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/ONLINE_QUIZ_LOGO-removebg-preview.png" alt="Quizify Logo">
+            <img src="images/quizify2.png" alt="Quizify Logo">
         </div>
 
         <nav id="navbar">
