--- a/frontend/dashboardTeachers.html
+++ b/frontend/dashboardTeachers.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -12,47 +13,35 @@
         body {
             font-family: 'Inter', sans-serif;
         }
-        /* Custom rotation for the chevron icon */
-        .rotate-180 {
-            transform: rotate(180deg);
-        }
-        .transition-transform {
-            transition: transform 0.3s ease-in-out;
-        }
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
     <div class="dashboard-container relative w-full max-w-6xl bg-white shadow-lg rounded-xl overflow-hidden flex flex-col">
         <header class="p-4 bg-white flex justify-between items-center z-10 border-b border-gray-200">
-            <h1 class="text-2xl font-bold text-gray-800">TEACHER DASHBOARD</h1>
+            <h1 class="text-2xl font-bold text-gray-800">DASHBOARD TEACHER</h1>
             <div class="relative group">
                 <button class="flex items-center space-x-2 bg-transparent border-none cursor-pointer p-2 rounded-md hover:bg-gray-100 transition duration-300">
-                    <img src="quizify2.png" alt="Quizify Logo" class="h-10 rounded">
+                    <img src="https://placehold.co/100x40/6a0dad/ffffff?text=Quizify" alt="Quizify Logo" class="h-10 rounded">
                     <i class="fas fa-caret-down text-gray-600"></i>
                 </button>
                 <div class="absolute right-0 mt-2 w-32 bg-white rounded-md shadow-lg py-1 hidden group-hover:block">
-                    <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Profile</a>
-                    <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Log out</a>
+                    <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100" onclick="handleProfile()">Profile</a>
+                    <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100" onclick="handleLogout()">Log out</a>
                 </div>
             </div>
         </header>
 
         <div class="flex flex-grow">
             <aside class="w-full lg:w-64 bg-blue-700 p-6 flex-shrink-0 text-white">
-                <div class="flex items-center justify-between mb-4">
-                    <h3 class="text-lg font-semibold">Profile Teacher</h3>
-                    <button id="profileToggleButton" class="text-white focus:outline-none">
-                        <i id="profileToggleIcon" class="fas fa-chevron-down transition-transform"></i>
-                    </button>
-                </div>
-
-                <div id="profileDetails" class="flex items-center mb-8 bg-blue-800 p-3 rounded-md">
-                    <i class="fas fa-user-circle text-4xl mr-3"></i>
+                <div class="flex items-center mb-8 bg-blue-800 p-3 rounded-md">
+                    <img id="sidebar-profile-picture" src="https://placehold.co/128x128/cccccc/333333?text=Profile" alt="Profile Picture" class="w-12 h-12 rounded-full mr-3 object-cover">
                     <div>
-                        <p class="font-semibold text-lg">Welcome, Teacher Name!</p>
-                        <p class="text-sm opacity-90">Email: teacher@example.com</p>
+                        <p class="font-semibold text-lg">Welcome, <span id="sidebar-user-name">John Doe</span>!</p>
+                        <p class="text-sm opacity-90">Class: 5A</p>
                     </div>
                 </div>
+
+                <h3 class="text-lg font-semibold mb-4">Class: 5A</h3>
 
                 <nav>
                     <ul>
@@ -84,20 +73,16 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="mb-4 ml-4"> <a href="#" class="text-white hover:text-blue-200 block py-2 text-base">Quiz Library</a>
-                        </li>
-                        <li class="mb-4 ml-4"> <a href="#" class="text-white hover:text-blue-200 block py-2 text-base">Quiz Created</a>
-                        </li>
                     </ul>
                 </nav>
             </aside>
 
             <main class="flex-grow p-6 bg-white rounded-br-xl">
                 <div class="bg-blue-100 p-4 rounded-lg mb-8 flex items-center">
-                    <i class="fas fa-user-circle text-blue-700 text-3xl mr-4"></i>
+                    <img id="banner-profile-picture" src="https://placehold.co/128x128/cccccc/333333?text=Profile" alt="Profile Picture" class="w-12 h-12 rounded-full mr-4 object-cover">
                     <div>
-                        <p class="font-semibold text-lg">Welcome, Teacher Name!</p>
-                        <p class="text-blue-600">Email: teacher@example.com</p>
+                        <p class="font-semibold text-blue-800 text-lg">Welcome, <span id="banner-user-name">John Doe</span>!</p>
+                        <p class="text-blue-600">Class: 5A</p>
                     </div>
                 </div>
 
@@ -155,19 +140,118 @@
         </div>
     </div>
 
-    <script>
-        // Get references to the button and the profile details div
-        const profileToggleButton = document.getElementById('profileToggleButton');
-        const profileToggleIcon = document.getElementById('profileToggleIcon');
-        const profileDetails = document.getElementById('profileDetails');
+    <script type="module">
+        // Firebase imports
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+        import { getAuth, signInAnonymously, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        // Add a click event listener to the button
-        profileToggleButton.addEventListener('click', () => {
-            // Toggle the 'hidden' class on the profile details div
-            profileDetails.classList.toggle('hidden');
-            // Toggle the 'rotate-180' class on the icon for visual feedback
-            profileToggleIcon.classList.toggle('rotate-180');
-        });
+        // Firebase variables
+        let app;
+        let db;
+        let auth;
+        let userId;
+        let appId;
+
+        // Default profile data (for demonstration purposes, used if no data in Firestore)
+        let defaultUserProfile = {
+            name: "John Doe",
+            profileImage: "https://placehold.co/128x128/cccccc/333333?text=Profile"
+        };
+
+        /**
+         * Handles the logout action.
+         */
+        function handleLogout() {
+            console.log("Dashboard: Logging out...");
+            window.location.href = './login.html';
+        }
+
+        /**
+         * Handles the profile action.
+         * Now simply navigates to the profile page; data is handled by Firestore.
+         */
+        function handleProfile() {
+            console.log("Dashboard: Navigating to profile.html");
+            window.location.href = `./profile.html`; // No URL parameters needed
+        }
+
+        /**
+         * Updates the profile pictures and user names on the dashboard.
+         * @param {string} imageUrl The Base64 encoded image URL or a placeholder.
+         * @param {string} userName The user's name.
+         */
+        function updateDashboard(imageUrl, userName) {
+            console.log("Dashboard: updateDashboard - Updating with - Image URL:", imageUrl ? "present" : "missing", "User Name:", userName);
+
+            const sidebarProfilePicture = document.getElementById('sidebar-profile-picture');
+            const bannerProfilePicture = document.getElementById('banner-profile-picture');
+            const sidebarUserName = document.getElementById('sidebar-user-name');
+            const bannerUserName = document.getElementById('banner-user-name');
+
+            if (sidebarProfilePicture && imageUrl) {
+                sidebarProfilePicture.src = imageUrl;
+            }
+            if (bannerProfilePicture && imageUrl) {
+                bannerProfilePicture.src = imageUrl;
+            }
+            if (sidebarUserName && userName) {
+                sidebarUserName.textContent = userName;
+            }
+            if (bannerUserName && userName) {
+                bannerUserName.textContent = userName;
+            }
+        }
+
+        // Initialize Firebase and load profile data from Firestore on page load
+        window.onload = async function() {
+            // Global variables provided by the Canvas environment
+            appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+            const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
+            const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+
+            if (Object.keys(firebaseConfig).length === 0) {
+                console.error("Dashboard: Firebase config is missing or empty.");
+                return;
+            }
+
+            try {
+                app = initializeApp(firebaseConfig);
+                db = getFirestore(app);
+                auth = getAuth(app);
+
+                if (initialAuthToken) {
+                    await signInWithCustomToken(auth, initialAuthToken);
+                    console.log("Dashboard: Signed in with custom token.");
+                } else {
+                    await signInAnonymously(auth);
+                    console.log("Dashboard: Signed in anonymously.");
+                }
+                userId = auth.currentUser?.uid || crypto.randomUUID(); // Fallback if auth.currentUser is null
+                console.log("Dashboard: User ID:", userId);
+
+                // Fetch profile data from Firestore
+                const profileRef = doc(db, `artifacts/${appId}/users/${userId}/userProfiles`, "myProfile");
+                const profileSnap = await getDoc(profileRef);
+
+                let currentProfileData = defaultUserProfile; // Start with default
+
+                if (profileSnap.exists()) {
+                    currentProfileData = profileSnap.data();
+                    console.log("Dashboard: Loaded profile from Firestore:", currentProfileData);
+                } else {
+                    console.log("Dashboard: No existing profile found in Firestore for this user. Using default profile.");
+                }
+
+                // Update dashboard elements with fetched or default data
+                updateDashboard(currentProfileData.profileImage, currentProfileData.name);
+
+            } catch (error) {
+                console.error("Dashboard: Firebase initialization or data loading error:", error);
+                // In case of error, still try to update with default values
+                updateDashboard(defaultUserProfile.profileImage, defaultUserProfile.name);
+            }
+        };
     </script>
 </body>
 </html>
