--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,120 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quizify</title>
-    <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quizify</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="images/quizify2.png" alt="Quizify Logo">
+  <header>
+    <div class="logo">
+      <img src="images/quizify2.png" alt="Quizify Logo" />
+    </div>
+    <nav id="navbar">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#target">Target</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <!-- Home -->
+    <section id="home">
+      <h1>"Knowledge Begins with a Question"</h1>
+      <div class="buttons">
+        <button id="signupBtn">Sign up</button>
+        <button id="loginBtn">Log in</button>
+      </div>
+    </section>
+
+    <!-- About -->
+    <section id="about">
+      <h2>About Quizify</h2>
+      <p>Quizify is an interactive online quiz platform designed to make learning fun, engaging, and effective through personalized quizzes and instant feedback.</p>
+    </section>
+
+    <!-- Features -->
+    <section id="features">
+      <h2>Key Features</h2>
+      <div class="card-grid">
+        <div class="card-box">
+          <h3>📊 Performance Stats</h3>
+          <p>Track your progress in real-time.</p>
         </div>
+        <div class="card-box">
+          <h3>🤖 AI-Powered Quizzes</h3>
+          <p>Get customized quizzes based on your skills.</p>
+        </div>
+      </div>
+    </section>
 
-        <nav id="navbar">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#target">Target</a></li>
-                <li><a href="#faq">FAQ</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+    <!-- Target -->
+    <section id="target">
+      <h2>Who is it for?</h2>
+      <div class="card-grid">
+        <div class="card-box">
+          <h3>Students</h3>
+          <p>Practice quizzes before exams.</p>
+        </div>
+        <div class="card-box">
+          <h3>Teachers</h3>
+          <p>Create and share quizzes with your class.</p>
+        </div>
+        <div class="card-box">
+          <h3>Organizations</h3>
+          <p>Assess staff skills through automated evaluations.</p>
+        </div>
+      </div>
+    </section>
 
-    </header>
+    <!-- FAQ -->
+    <section id="faq">
+      <h2>Frequently Asked Questions</h2>
+      <div class="card-grid">
+        <div class="card-box">
+          <strong>Is Quizify free?</strong>
+          <p>Yes, the basic version is free for everyone.</p>
+        </div>
+        <div class="card-box">
+          <strong>Is it only for students?</strong>
+          <p>No, it's also for teachers and companies.</p>
+        </div>
+        <div class="card-box">
+          <strong>Do I need to sign up?</strong>
+          <p>Yes, to save your progress and results.</p>
+        </div>
+      </div>
+    </section>
+  </main>
 
-    <main>
-        <!-- Home -->
-        <section id="home">
-            <h1>"Knowledge Begins with a Question"</h1>
-            <div class="buttons">
-                <button id="signupBtn">Sign up</button>
-                <button id="loginBtn">Log in</button>
-            </div>
-        </section>
+  <!-- Footer -->
+  <footer>
+    <section id="contact">
+      <div class="social-icons">
+        <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png" alt="Facebook" /></a>
+        <a href="#"><img src="https://www.citypng.com/public/uploads/preview/black-and-white-outline-instagram-app-logo-icon-7017516951369307x990iaok2.png" alt="Instagram" /></a>
+        <a href="#"><img src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png" alt="Twitter" /></a>
+      </div>
+      <p>© 2025 Quizify. All rights reserved.</p>
+    </section>
+  </footer>
 
-        <!-- About -->
-        <section id="about">
-            <h1>🧠 Quizify</h1>
-            <p>"Quizify is an interactive online quiz platform designed to make learning fun, engaging, and effective
-                through personalized quizzes and instant feedback."</p>
-        </section>
-
-        <!-- Features -->
-        <section id="features">
-            <h2>🔧 Key Features</h2>
-            <div class="card">
-                <h3>📊 Performance Stats</h3>
-                <p>Track your progress in real-time.</p>
-            </div>
-            <div class="card">
-                <h3>🤖 AI-Powered Quizzes</h3>
-                <p>Get customized quizzes based on your skills.</p>
-            </div>
-        </section>
-
-        <!-- Target -->
-        <section id="target">
-            <h2>👥 Who is it for?</h2>
-            <div class="target">
-                <div class="card">
-                    <h3>Students</h3>
-                    <p>Practice quizzes before exams.</p>
-                </div>
-                <div class="card">
-                    <h3>Teachers</h3>
-                    <p>Create and share quizzes with your class.</p>
-                </div>
-                <div class="card">
-                    <h3>Organizations</h3>
-                    <p>Assess staff skills through automated evaluations.</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- FAQ -->
-        <section id="faq" class="faq">
-            <h2>❓ Frequently Asked Questions</h2>
-            <div class="card">
-                <p><strong>Is Quizify free?</strong> Yes, the basic version is free for everyone.</p>
-                <p><strong>Is it only for students?</strong> No, it's also for teachers and companies.</p>
-                <p><strong>Do I need to sign up?</strong> Yes, to save your progress and results.</p>
-            </div>
-        </section>
-    </main>
-
-    <!-- Login & Sign Up Redirect -->
-    <script>
-        document.getElementById("loginBtn").addEventListener("click", function () {
-            window.location.href = "login.html";
-        });
-        document.getElementById("signupBtn").addEventListener("click", function () {
-            window.location.href = "signup.html";
-        });
-    </script>
-
-    <!--footer-->
-    <footer>
-        <section id="contact">
-            <div class="social-icons">
-                <a href="#"><img
-                        src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png"
-                        alt="Facebook"></a>
-                <a href="#"><img
-                        src="https://www.citypng.com/public/uploads/preview/black-and-white-outline-instagram-app-logo-icon-7017516951369307x990iaok2.png "
-                        alt="Instagram"></a>
-                <a href="#"><img
-                        src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png"
-                        alt="Twitter"></a>
-            </div>
-            <p>© 2025 Quizify. All rights reserved.</p>
-
-        </section>
-    </footer>
+  <!-- Redirect Script -->
+  <script>
+    document.getElementById("loginBtn").addEventListener("click", () => {
+      window.location.href = "login.html";
+    });
+    document.getElementById("signupBtn").addEventListener("click", () => {
+      window.location.href = "signup.html";
+    });
+  </script>
 </body>
-
 </html>
