--- a/frontend/quizResult.html
+++ b/frontend/quizResult.html
@@ -10,8 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/ONLINE_QUIZ_LOGO-removebg-preview.png" 
-            alt="Quizify Logo">
+          <img src="images/quizify2.png" alt="Quizify Logo" />
         </div>
 
         <nav>
