--- a/frontend/dashboardStudent.html
+++ b/frontend/dashboardStudent.html
@@ -21,14 +21,18 @@
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
     <div class="dashboard-container relative w-full max-w-6xl bg-white shadow-lg rounded-xl overflow-hidden flex flex-col">
+
         <!-- Header -->
         <header class="p-4 bg-white flex justify-between items-center z-10 border-b border-gray-200">
             <h1 class="text-2xl font-bold text-gray-800">DASHBOARD STUDENT</h1>
             <div class="relative group">
-                <button class="flex items-center space-x-2 bg-transparent border-none cursor-pointer p-2 rounded-md hover:bg-gray-100 transition duration-300">
-                    <img src="https://placehold.co/100x40/6a0dad/ffffff?text=Quizify" alt="Quizify Logo" class="h-10 rounded">
+
+                <!-- Updated Logo Container -->
+                <div class="logo flex items-center space-x-2 p-2 rounded-md hover:bg-gray-100 transition duration-300 cursor-pointer">
+                    <img src="images/quzify4.png" alt="Quizify Logo" class="h-10" />
                     <i class="fas fa-caret-down text-gray-600"></i>
-                </button>
+                </div>
+
                 <div class="absolute right-0 mt-2 w-32 bg-white rounded-md shadow-lg py-1 hidden group-hover:block">
                     <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Profile</a>
                     <!-- Log out button with JavaScript function call -->
